use anonymous login, introduce framer motion and fix overflow

--- a/apps/frontend/src/components/CommandMenu/CommandMenu.module.scss
+++ b/apps/frontend/src/components/CommandMenu/CommandMenu.module.scss
@@ -171,10 +171,24 @@
     padding: 4px 10px;
     border-radius: 100px;
     color: hsla(0, 0%, 59%, 1);
+    position: relative;
 
     &[data-active="true"] {
-      background: rgba(249, 249, 249, 0.52);
       color: hsla(0, 0%, 32%, 1);
+    }
+
+    > :not(.navBackground) {
+      z-index: 1;
+    }
+
+    .navBackground {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(249, 249, 249, 0.52);
+      border-radius: 1000px;
     }
   }
 }
